--- a/Rudin.true/macros.tex
+++ b/Rudin.true/macros.tex
@@ -10,6 +10,9 @@
 \newcommand{\vdone}{\vi{\text{ (done) }}}
 \newcommand{\bdone}{\blue{\text{ (done) }}}
 \newcommand{\tdone}{\teal{\text{ (done) }}}
+\newcommand{\ld}{\lambda}
+
+\newcommand{\vecta}[1]{\textbf{#1}}
 \newcommand{\set}[1]{\{ #1 \}}
 \newcommand{\inS}{\in S}
 \newcommand{\inF}{\in\F}
@@ -18,4 +21,9 @@
 \newcommand{\inB}{\in B}
 \newcommand{\inC}{\in C}
 \newcommand{\inU}{\in U}
+\newcommand{\inV}{\in V}
+\newcommand{\inR}{\in\R}
+\newcommand{\norm}[1]{\| #1 \|}
+\newcommand{\gen}[1]{\langle #1 \rangle}
+\newcommand{\abso}[1]{|#1|}
 \newcommand{\myref}[2]{\hyperref[#2]{#1\ \ref*{#2}}}
