--- a/Rudin.true/macros.tex
+++ b/Rudin.true/macros.tex
@@ -11,7 +11,6 @@
 \newcommand{\bdone}{\blue{\text{ (done) }}}
 \newcommand{\tdone}{\teal{\text{ (done) }}}
 \newcommand{\ld}{\lambda}
-
 \newcommand{\vecta}[1]{\textbf{#1}}
 \newcommand{\set}[1]{\{ #1 \}}
 \newcommand{\inS}{\in S}
@@ -23,6 +22,11 @@
 \newcommand{\inU}{\in U}
 \newcommand{\inV}{\in V}
 \newcommand{\inR}{\in\R}
+\newcommand{\inn}{\in\N}
+\newcommand{\inz}{\in\Z}
+\newcommand{\inr}{\in\R}
+\newcommand{\inc}{\in\C}
+\newcommand{\inq}{\in\Q}
 \newcommand{\norm}[1]{\| #1 \|}
 \newcommand{\gen}[1]{\langle #1 \rangle}
 \newcommand{\abso}[1]{|#1|}
